GL/Projet_GL/src/test/deca/codegen/invalid/AvecObjet/cast_impossible.deca
// Description:
//    Test de cast 
//
// Resultats:
//    Erreur à l'exécution : Cast Impossible

class A{
    int x;
}

class B extends A{
    int y;
}

class C extends A{
    int z;
}

{
   A c = new C();
   B b = (B) (c);
}